Fix sidebar styling and width on small devices

--- a/style.css
+++ b/style.css
@@ -41,3 +41,9 @@
 .navbar-offcanvas .offcanvas-inner .list-action > li.mini-cart {
     display: none;
 }
+
+@media screen and (max-width: 479px) {
+    .container {
+        width: 95%;
+    }
+}
